créer la vue d'ingrédients