@@ -2,12 +2,12 @@ package nimnamfood.command.ingredient;
 
 import nimnamfood.model.Repositories;
 import nimnamfood.model.ingredient.Ingredient;
+import nimnamfood.model.ingredient.IngredientCreated;
 import org.springframework.stereotype.Component;
 import vtertre.command.CommandHandler;
 import vtertre.ddd.Tuple;
 import vtertre.ddd.event.DomainEvent;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -15,8 +15,8 @@ import java.util.UUID;
 public class CreateIngredientCommandHandler implements CommandHandler<CreateIngredientCommand, UUID> {
     @Override
     public Tuple<UUID, List<DomainEvent>> execute(CreateIngredientCommand command) {
-        final Ingredient ingredient = new Ingredient(command.name, command.unit);
-        Repositories.ingredients().add(ingredient);
-        return Tuple.of(ingredient.getId(), Collections.emptyList());
+        final Tuple<Ingredient, IngredientCreated> tuple = Ingredient.factory().create(command.name, command.unit);
+        Repositories.ingredients().add(tuple._1);
+        return tuple.map(((ingredient, event) -> Tuple.of(ingredient.getId(), List.of(event))));
     }
 }
